crates/toml/tests/snapshots/invalid/array/no-close-table-01.stderr
TOML parse error at line 1, column 32
  |
1 | no-close-table-01 = [{ key = 42
  |                                ^
unclosed inline table, expected `}`

---
TOML parse error at line 1, column 32
  |
1 | no-close-table-01 = [{ key = 42
  |                                ^
unclosed array, expected `]`
